[gd_scene load_steps=4 format=3 uid="uid://cjwjvurcfkdr1"]

[ext_resource type="Script" path="res://toolset_test/source_container.gd" id="2"]
[ext_resource type="Script" path="res://toolset_test/target_container_final.gd" id="3"]
[ext_resource type="Script" path="res://toolset_test/drag_and_drop_demo_final.gd" id="4"]

[node name="DragAndDropDemo" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="VLayout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DescriptionHeader" type="HBoxContainer" parent="VLayout"]
layout_mode = 2

[node name="M1H" type="Panel" parent="VLayout/DescriptionHeader"]
layout_mode = 2

[node name="Menu One" type="Label" parent="VLayout/DescriptionHeader/M1H"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Menu 1"

[node name="M2H" type="Panel" parent="VLayout/DescriptionHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuTwo" type="Label" parent="VLayout/DescriptionHeader/M2H"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Menu 2"

[node name="M3H" type="Panel" parent="VLayout/DescriptionHeader"]
layout_mode = 2

[node name="Menu3Label" type="Label" parent="VLayout/DescriptionHeader/M3H"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Menu 3"

[node name="M4H" type="Panel" parent="VLayout/DescriptionHeader"]
layout_mode = 2

[node name="Menu4Label" type="Label" parent="VLayout/DescriptionHeader/M4H"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Menu 4"

[node name="ToolsOptions" type="HBoxContainer" parent="VLayout"]
layout_mode = 2

[node name="ToolsContainer" type="Panel" parent="VLayout/ToolsOptions"]
layout_mode = 2
script = ExtResource("2")

[node name="Padding" type="MarginContainer" parent="VLayout/ToolsOptions/ToolsContainer"]
layout_mode = 0

[node name="Columns" type="HBoxContainer" parent="VLayout/ToolsOptions/ToolsContainer/Padding"]
layout_mode = 2

[node name="DragAndDropColumns" type="HBoxContainer" parent="VLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns"]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="VLayout/DragAndDropColumns/SourceContainer"]
size = Vector2i(596, 162)
mode = 2
visible = true
access = 2

[node name="Padding" type="MarginContainer" parent="VLayout/DragAndDropColumns/SourceContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Rows" type="VBoxContainer" parent="VLayout/DragAndDropColumns/SourceContainer/Padding"]
layout_mode = 2

[node name="CanvasContainer" type="Panel" parent="VLayout/DragAndDropColumns"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3")

[node name="Padding" type="MarginContainer" parent="VLayout/DragAndDropColumns/CanvasContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Rows" type="VBoxContainer" parent="VLayout/DragAndDropColumns/CanvasContainer/Padding"]
layout_mode = 2

[node name="DetailsContainer" type="Panel" parent="VLayout/DragAndDropColumns"]
layout_mode = 2
